--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1> hello world ! <h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title> BlueTooth Magic</title>
+
+    <meta name="viewport" content="width=device-width", initial-scale=1.0">
+</head>
+<body>
+    <div class="top"> 
+        <h1> Hello world </h1>
+    </div>
+    <div class="mid">
+        <h1> test </h1>
+    </div>
+    <div class="bottom">
+        <h1> bottom test</h1>
+    </div>
+</body>
+</html>
