--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 </head>
 <body>
     <div class="top"> 
-        <h1> Hello world </h1>
+        <h2> Press to search for devices</h2>
+        <button> connect </button>>
     </div>
     <div class="mid">
-        <h1> test </h1>
     </div>
     <div class="bottom">
-        <h1> bottom test</h1>
     </div>
 </body>
 </html>
