--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <body>
     <div class="top"> 
         <h2> Press to search for devices</h2>
-        <button> connect </button>
+        <button onclick = "connect()"> connect </button>
     </div>
     <div class="mid">
     </div>
     <div class="bottom">
     </div>
+    
+    <script src="bulb.js"></script>
 </body>
 </html>
