--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="bulb.js"></script>                                                                      
     <div class="top"> 
         <h2> Press to search for devices</h2>
-        <button onclick="connect()"> connect </button>
+        <button onclick="connect()"> </button>
     </div>
     <div class="mid">
     </div>
