--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="bottom">
     </div>
-    <script src="bulb.js"></script>
+    <script src="blub.js"></script>
     
 </body>
 </html>
