Send Request to get Characteristic
Note this version may not work because I dont know which endian the caractersistc is in

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <button onclick="connect()"> Press to Connect </button>
     </div>
     <div class="mid">
+        <h2> Press to turn on</h2>
+        <button onclick="turnon()"> On </button>
+        <h2> Press to turn off</h2>
+        <button onclick="turnoff()"> Off </button>
     </div>
     <div class="bottom">
     </div>
