--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
                                                                           
-    <div class="top"> 
+    <div class="top">
         <h2> Press to search for devices</h2>
-        <button onclick="acceptAll()"> Press to accept all connections</button>
+        <button onclick="toggleAccept()"> Press to accept all connections</button>
         <button onclick="connect()"> Press to Connect </button>
     </div>
     <div class="mid">
