--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                                                                           
     <div class="top">
         <h2> Press to search for devices</h2>
-        <button onclick="toggleAccept()"> Press to accept all connections</button>
+        Connect All: <input type="checkbox" id="acceptAll">
         <button onclick="connect()"> Press to Connect </button>
     </div>
     <div class="mid">
