--- a/index.html
+++ b/index.html
@@ -5,29 +5,36 @@
 
     <meta name="viewport" content="width=device-width", initial-scale=1.0">
 </head>
-<body>                                                         
+<body>                 
+
+
     <div class="top">
         <h1> Auido stuff</h1>
             <input type="file" id="file-input" accept="audio/*,video/*,image/*" />
-            <audio id="audio" controls> </audio>
+            <audio id="audio" src="elijah who - skateboard p.mp3" controls> </audio>
 
         <h1> Parameters for Bluetooth</h1>
-
         Serivce: <input type="text" id="service"> 
         <button onclick="setService()"> set </button> <br>
 
         Characteristic: <input type="text" id="Characteristic">
         <button onclick="setCharacteristic()"> set </button> 
     </div>
+
+
     <div class="mid">
         <h1> Start Connection</h1>
         <button onclick="connect()"> Press to Connect </button>
     </div>
+
+
     <div class="bottom">
         <h1> Functions to Control Lights</h1>
         <button onclick="turnon()"> On </button>
         <button onclick="turnoff()"> Off </button>
     </div>
+
+
     <script src="blub.js"></script>
     <script src="audio.js"></script>
     
