--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <div class="bottom">
         <h1> Functions to Control Lights</h1>
-        <button onclick="turnon()"> On </button>
-        <button onclick="turnoff()"> Off </button>
+        <button onclick="turnOn()"> On </button>
+        <button onclick="turnOff()"> Off </button>
     </div>
 
 
