--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="top">
         <h1> Auido stuff</h1>
-            <input type="file" id="file-input"/>
+            <input type="file" id="file-input" accept="audio"/>
             <audio id="audio" controls> </audio>
 
         <h1> Parameters for Bluetooth</h1>
