--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="top">
         <h1> Auido stuff</h1>
             <input type="file" id="file-input" accept="audio"/>
-            <audio id="audio" controls> </audio>
+            <audio id="audio" src="elijah who - skateboard p.mp3" controls> </audio>
 
         <h1> Parameters for Bluetooth</h1>
         Serivce: <input type="text" id="service"> 
