--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <div class="mid">
         <h1> Start Connection</h1>
+        <button onclick="unlock()">unlock</button>
+
         <button onclick="connect()"> Press to Connect </button>
     </div>
 
