--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
     <div class="top">
         <h1> Auido stuff</h1>
-            <input type="file" id="file-input" accept="audio"/>
-            <audio id="audio" src="elijah who - skateboard p.mp3" controls> </audio>
+        <!-- <button onclick="unlock()">unlock</button> -->
+        <input type="file" id="file-input" accept="audio"/>
+        <audio id="audio" src="elijah who - skateboard p.mp3" controls> </audio>
 
         <h1> Parameters for Bluetooth</h1>
         Serivce: <input type="text" id="service"> 
@@ -24,8 +25,6 @@
 
     <div class="mid">
         <h1> Start Connection</h1>
-        <button onclick="unlock()">unlock</button>
-
         <button onclick="connect()"> Press to Connect </button>
     </div>
 
