--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="top">
         <h1> Auido stuff</h1>
-        <!-- <button onclick="unlock()">unlock</button> -->
+        <button onclick="unlock()">unlock</button>
         <input type="file" id="file-input" accept="audio"/>
         <audio id="audio" src="elijah who - skateboard p.mp3" controls> </audio>
 
