--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> BlueTooth Magic</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <meta name="viewport" content="width=device-width", initial-scale=1.0">
+    <title> BlueTooth Magic</title>
 </head>
 <body>                 
 
@@ -12,7 +14,9 @@
         <h1> Auido stuff</h1>
         <button onclick="">unlock</button>
         <input type="file" id="file-input" accept="audio"/>
-        <audio id="audio" src="elijah who - skateboard p.mp3" controls> </audio>
+        <audio id="audio" controls>
+            <source src="elijah who - skateboard p.mp3"/>
+        </audio>
 
         <h1> Parameters for Bluetooth</h1>
         Serivce: <input type="text" id="service"> 
@@ -37,7 +41,7 @@
 
 
     <script src="blub.js"></script>
-    <script src="demo.js"></script>
+    <script src="audio.js"></script>
     
 </body>
 </html>
