--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
         <h1> Functions to Control Lights</h1>
         <button onclick="turnOn()"> On </button>
         <button onclick="turnOff()"> Off </button>
+        <button onclick="firePlace()"> fire place </button>
     </div>
 
 
     <script src="blub.js"></script>
-    <script src="audio.js"></script>
+    <!-- <script src="audio.js"></script> -->
     
 </body>
 </html>
