--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
     <script src="blub.js"></script>
-    <!-- <script src="audio.js"></script> -->
+    <script src="audio.js"></script>
     
 </body>
 </html>
