Added some functionality for testing

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
 
     <div class="top">
-        <!-- <h1> Auido stuff</h1>
+        <h1> Auido stuff</h1>
         <audio id="audio" controls>
             <source src="elijah who - skateboard p.mp3"/>
-        </audio> -->
+        </audio>
+        <h3> Pass in frequency to display</h3>
+        <input type="number" id="myNumber" value="4">
 
         <h1> Parameters for Bluetooth</h1>
         <button onclick="OnOff()"> on or off </button> <br>
