added change button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </audio>
         <h3> Pass in frequency to display</h3>
         <input type="number" id="myNumber" value="4">
+        <button onClick="changeFreq()"> Change </button>
 
         <h1> Parameters for Bluetooth</h1>
         <button onclick="OnOff()"> on or off </button> <br>
